tests/fixtures/invalid/pow_none_float_dict.py
# Cannot call pow() with None, Float, Dict[str, int]
x = pow(None, 1.0, {"a": 1})
